syntax = "proto3";

import "google/protobuf/timestamp.proto";

package v1;

option go_package = "github.com/filipe1309/agl-go-driver/proto/v1/users";

message UserRequest {
  int64 id = 1;
  string name = 2;
  string login = 3;
  string password = 4;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string login = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp last_login = 6;
}
